tests/NormalTests/paczka1/small_fuzzy/12984443.err
Error in line 15: mscHoVCbnPF A750 93,X
